--- a/Test/test.html
+++ b/Test/test.html
@@ -8,39 +8,19 @@
     <script src="../Components/Card/card.js" defer></script>
     <script src="../Components/Navbar/navbar.js" defer></script>
     <script src="../Components/Footer/footer.js" defer></script>
+    <script src="../Components/Carroussel/carroussel.js" defer></script>
 </head>
 <body>
     <!-- Navbar -->
     <nav-bar></nav-bar>
     <main>
-        <div class="carousel">
-            <img src="../Carroussel/Banner1.png" class="active" alt="Image 1">
-            <img src="../Carroussel/Banner2.png" alt="Image 2">
-            <div class="carousel-controls">
-                <button id="prev">
-                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="30" cy="30" r="30" fill="#161616"/>
-                        <path d="M37.6771 31.4444L27.4002 41.7212L25.3264 39.6474L34.2836 30.6903L34.5664 30.4074L34.2836 30.1246L25.3264 21.1674L27.4002 19.0936L37.6771 29.3705C37.6771 29.3705 37.6771 29.3705 37.6771 29.3705C37.952 29.6456 38.1065 30.0185 38.1065 30.4074C38.1065 30.7963 37.952 31.1693 37.6771 31.4443C37.6771 31.4443 37.6771 31.4443 37.6771 31.4444Z" fill="#1A9F1A" stroke="#1A9F1A" stroke-width="0.8"/>
-                    </svg>                    
-                </button>
-                <button id="next">
-                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="30" cy="30" r="30" fill="#161616"/>
-                        <path d="M37.6771 31.4444L27.4002 41.7212L25.3264 39.6474L34.2836 30.6903L34.5664 30.4074L34.2836 30.1246L25.3264 21.1674L27.4002 19.0936L37.6771 29.3705C37.6771 29.3705 37.6771 29.3705 37.6771 29.3705C37.952 29.6456 38.1065 30.0185 38.1065 30.4074C38.1065 30.7963 37.952 31.1693 37.6771 31.4443C37.6771 31.4443 37.6771 31.4443 37.6771 31.4444Z" fill="#1A9F1A" stroke="#1A9F1A" stroke-width="0.8"/>
-                    </svg>   
-                </button>
-            </div>
-            <!-- Progress bar indicators -->
-            <div class="progress-bar-container" id="progress-bar-container">
-                <div class="progress-bar active"></div>
-                <div class="progress-bar"></div>
-            </div>
-        </div>
+        <carousel-element></carousel-element>
         <div class="cards">
             <card-component></card-component>
             <card-component></card-component>
             <card-component></card-component>
         </div>
+        <footer-component></footer-component>
     </main>
 </body>
 </html>
