Refactor Navbar styles, remove sales page and associated styles, and update card components in test page

--- a/Test/test.html
+++ b/Test/test.html
@@ -17,9 +17,16 @@
     <main>
         <carousel-element></carousel-element>
         <div class="cards">
-            <card-component></card-component>
-            <card-component></card-component>
-            <card-component></card-component>
+            <card-component
+                image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                badge="../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+            <card-component
+                image="https://image.api.playstation.com/vulcan/ap/rnd/202010/0114/b4Q1XWYaTdJLUvRuALuqr0wP.png"
+                badge="../images/image7.svg" name="Doom Eternal" price="R$ 70,00"></card-component>
+            <card-component
+                image="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077UltimateEdition_CDPROJEKTRED_Editions_S2_1200x1600-81442c61fd09b45ecd03add7c0c3afdd"
+                badge="../images/image7.svg" name="Cyberpunk 2077" subtitle="phantom liberty" price="R$ 80,00"></card-component>
+
         </div>
         <div class="sales">
             <sales-component text1="Consoles semi-novos" text2="Desconto de" text3="40%"
