Add categories page and update navigation; refactor API route handling and enhance footer styles

--- a/Pages/home.html
+++ b/Pages/home.html
@@ -40,7 +40,7 @@
                 text4="Apenas alguns jogos estão disponíveis" image="../images/Group12.png"></sales-component>
         </div>
         <div class="cards">
-            <h1>Categorias.<a href=""> Ver Todas.</a></h1>
+            <h1>Categorias.<a href="../Pages/categories.html"> Ver Todas.</a></h1>
             <hr/>
             <div class="top_sales">
                 <categories-component 
