Add heart SVG icon, enhance exclusive styles, and implement Mostseller component layout

--- a/Pages/exclusive.html
+++ b/Pages/exclusive.html
@@ -8,6 +8,7 @@
     <script src="../Components/Navbar/navbar.js" defer></script>
     <script src="../Components/Footer/footer.js" defer></script>
     <script src="../Components/Card/card.js" defer></script>
+    <script src="../Components/Mostseller/mostseller.js" defer></script>
     <title>Exclusive</title>
 </head>
 
@@ -83,13 +84,117 @@
             <section>
                 <h1>Mais Vendidos</h1>
                 <hr>
-                <div class="top_card">
-                    
+                <div class="most_sales">
+                    <most-seller
+                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                        name="Halo Infinite"
+                        subtitle=""
+                        price="R$ 99,90"
+                        previous-price="R$ 129,90"
+                        genre1="Aventura"
+                        genre2="RPG"
+                        genre3="Ação"
+                        rating="⭐⭐⭐⭐"
+                        badge="../images/image7.svg"
+                        badge-region="Global"
+                    ></most-seller>       
+                    <most-seller
+                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                        name="Halo Infinite"
+                        subtitle=""
+                        price="R$ 99,90"
+                        previous-price="R$ 129,90"
+                        genre1="Aventura"
+                        genre2="RPG"
+                        genre3="Ação"
+                        rating="⭐⭐⭐⭐"
+                        badge="../images/image7.svg"
+                        badge-region="Global"
+                    ></most-seller>       
+                    <most-seller
+                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                        name="Halo Infinite"
+                        subtitle=""
+                        price="R$ 99,90"
+                        previous-price="R$ 129,90"
+                        genre1="Aventura"
+                        genre2="RPG"
+                        genre3="Ação"
+                        rating="⭐⭐⭐⭐"
+                        badge="../images/image7.svg"
+                        badge-region="Global"
+                    ></most-seller>                
+                </div>
+            </section>
+            <section>
+                <h1>Exclusivos. <a href="">Ver todos.</a></h1>
+                <hr>
+                <div class="search-bar">
+                    <input type="search" id="search" placeholder="Pesquisar jogos">
+                </div>
+                <div class="top_sales">
+                    <card-component
+                    image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                    <card-component
+                        image="https://image.api.playstation.com/vulcan/ap/rnd/202010/0114/b4Q1XWYaTdJLUvRuALuqr0wP.png"
+                        badge="../../images/image7.svg" name="Doom Eternal" price="R$ 70,00"></card-component>
+                    <card-component
+                        image="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077UltimateEdition_CDPROJEKTRED_Editions_S2_1200x1600-81442c61fd09b45ecd03add7c0c3afdd"
+                        badge="../../images/image7.svg" name="Cyberpunk 2077" subtitle="phantom liberty" price="R$ 80,00"></card-component>
+                    <card-component
+                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                </div>
+                <div class="top_sales">
+                    <card-component
+                    image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                    <card-component
+                        image="https://image.api.playstation.com/vulcan/ap/rnd/202010/0114/b4Q1XWYaTdJLUvRuALuqr0wP.png"
+                        badge="../../images/image7.svg" name="Doom Eternal" price="R$ 70,00"></card-component>
+                    <card-component
+                        image="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077UltimateEdition_CDPROJEKTRED_Editions_S2_1200x1600-81442c61fd09b45ecd03add7c0c3afdd"
+                        badge="../../images/image7.svg" name="Cyberpunk 2077" subtitle="phantom liberty" price="R$ 80,00"></card-component>
+                    <card-component
+                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                </div>
+                <div class="top_sales">
+                    <card-component
+                    image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                    <card-component
+                        image="https://image.api.playstation.com/vulcan/ap/rnd/202010/0114/b4Q1XWYaTdJLUvRuALuqr0wP.png"
+                        badge="../../images/image7.svg" name="Doom Eternal" price="R$ 70,00"></card-component>
+                    <card-component
+                        image="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077UltimateEdition_CDPROJEKTRED_Editions_S2_1200x1600-81442c61fd09b45ecd03add7c0c3afdd"
+                        badge="../../images/image7.svg" name="Cyberpunk 2077" subtitle="phantom liberty" price="R$ 80,00"></card-component>
+                    <card-component
+                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
+                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
                 </div>
             </section>
         </main>
         <footer-component id="footer-text"></footer-component>
     </main>
+    <script>
+        // Função para filtrar jogos com base no termo de pesquisa
+        document.getElementById("search").addEventListener("input", function() {
+            const searchTerm = this.value.toLowerCase();
+            const cards = document.querySelectorAll("card-component");
+
+            cards.forEach(card => {
+                const gameName = card.getAttribute("name").toLowerCase();
+                // Verifica se o nome do jogo inclui o termo pesquisado
+                if (gameName.includes(searchTerm)) {
+                    card.style.display = "block";
+                } else {
+                    card.style.display = "none";
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
