Add Xbox logo favicon, update page titles, and remove deprecated configuration files

--- a/Pages/exclusive.html
+++ b/Pages/exclusive.html
@@ -9,7 +9,8 @@
     <script src="../Components/Footer/footer.js" defer></script>
     <script src="../Components/Card/card.js" defer></script>
     <script src="../Components/Mostseller/mostseller.js" defer></script>
-    <title>Exclusive</title>
+    <link rel="shortcut icon" href="../images/XboxLogo.svg" type="image/x-icon">
+    <title>Exclusivos</title>
 </head>
 
 <body>
