--- a/Pages/home.html
+++ b/Pages/home.html
@@ -11,6 +11,7 @@
     <script src="../Components/Carroussel/carroussel.js" defer></script>
     <script src="../Components/Sales/sales.js" defer></script>
     <script src="../Components/Categories/categories.js" defer></script>
+    <link rel="shortcut icon" href="../images/XboxLogo.svg" type="image/x-icon">
 </head>
 <body>
     <nav-bar 
