--- a/Pages/categories.html
+++ b/Pages/categories.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Categorias</title>
     <link rel="stylesheet" href="../styles/category.css">
     <script src="../Components/Card/card.js" defer></script>
     <script src="../Components/Navbar/navbar.js" defer></script>
@@ -11,6 +11,7 @@
     <script src="../Components/Carroussel/carroussel.js" defer></script>
     <script src="../Components/Sales/sales.js" defer></script>
     <script src="../Components/Categories/categories.js" defer></script>
+    <link rel="shortcut icon" href="../images/XboxLogo.svg" type="image/x-icon">
 </head>
 <body>
     <nav-bar 
