Add About page, update navigation links, enhance footer content, and improve category images

--- a/Pages/catalog.html
+++ b/Pages/catalog.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav-bar logo="../../images/XboxLogo.svg" title="Xbox series X/S" links='[
-        {"href": "home.html", "icon": "../../images/navbar/home.svg", "label": "Início"},
+        {"href": "../index.html", "icon": "../../images/navbar/home.svg", "label": "Início"},
         {"href": "catalog.html", "icon": "../../images/navbar/catalogo.svg", "label": "Catálogo"},
         {"href": "exclusive.html", "icon": "../../images/navbar/exclusivos.svg", "label": "Exclusivos"},
         {"href": "categories.html", "icon": "../../images/navbar/categorias.svg", "label": "Categorias"}
