--- a/Pages/categories.html
+++ b/Pages/categories.html
@@ -18,7 +18,7 @@
         logo="../../images/XboxLogo.svg" 
         title="Xbox series X/S" 
         links='[
-            {"href": "home.html", "icon": "../../images/navbar/home.svg", "label": "Início"},
+            {"href": "../index.html", "icon": "../../images/navbar/home.svg", "label": "Início"},
             {"href": "catalog.html", "icon": "../../images/navbar/catalogo.svg", "label": "Catálogo"},
             {"href": "exclusive.html", "icon": "../../images/navbar/exclusivos.svg", "label": "Exclusivos"},
             {"href": "categories.html", "icon": "../../images/navbar/categorias.svg", "label": "Categorias"}
@@ -34,74 +34,48 @@
             </div>
             <div class="category-card">
                 <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
+                    <img src="https://cdn1.epicgames.com/offer/602a0ef0aceb46cca62445439661d712/EGS_STALKER2HeartofChornobyl_GSCGameWorld_S1_2560x1440-7cc8db55646ee7b969c48defed6963f4" alt="">
+                    <h2>FPS</h2>
                 </a>
             </div>
             <div class="category-card">
                 <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
-                </a>
-            </div>
-        </div>
-        <div class="container">
-            <div class="category-card">
-                <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
-                </a>
-            </div>
-            <div class="category-card">
-                <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
-                </a>
-            </div>
-            <div class="category-card">
-                <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
+                    <img src="https://image.api.playstation.com/vulcan/ap/rnd/202009/2820/h12URI7MdswtFPFHpkppNh2z.png" alt="">
+                    <h2>RPG</h2>
                 </a>
             </div>
         </div>
         <div class="container">
             <div class="category-card">
                 <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
+                    <img src="https://p2.trrsf.com/image/fget/cf/940/0/images.terra.com/2023/03/16/resident-evil-4-remake-jogo-e1678975680521-qeffi8m0d202.jpg" alt="">
+                    <h2>Terror</h2>
                 </a>
             </div>
             <div class="category-card">
                 <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
+                    <img src="https://store-images.s-microsoft.com/image/apps.40300.68724117649475771.eac68952-84aa-42f0-875b-09de4c2ee208.400f5d27-ba33-4b31-afc3-474baf8115c7?q=90&w=480&h=270" alt="">
+                    <h2>Plataforma</h2>
                 </a>
             </div>
             <div class="category-card">
                 <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
+                    <img src="https://store-images.s-microsoft.com/image/apps.14580.14550648823552491.458517e5-6b50-4124-b28b-b87004bdb3d1.f9bbe86e-3b76-4300-ad5b-b685c42776cf?q=90&w=480&h=270" alt="">
+                    <h2>Simulação</h2>
                 </a>
             </div>
         </div>
         <div class="container">
             <div class="category-card">
                 <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
+                    <img src="https://sm.ign.com/ign_br/news/s/several-fo/several-forza-horizon-developers-leave-playground-games-and_7u97.jpg" alt="">
+                    <h2>Corrida</h2>
                 </a>
             </div>
             <div class="category-card">
                 <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
-                </a>
-            </div>
-            <div class="category-card">
-                <a href="">
-                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
-                    <h2>Ação</h2>
+                    <img src="https://image.api.playstation.com/vulcan/ap/rnd/202211/1408/l3bg7nmfPpPzam5jOVlaUFww.jpg" alt="">
+                    <h2>Luta</h2>
                 </a>
             </div>
         </div>
