--- a/Pages/categories.html
+++ b/Pages/categories.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pr-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,8 @@
             {"href": "../index.html", "icon": "../../images/navbar/home.svg", "label": "Início"},
             {"href": "catalog.html", "icon": "../../images/navbar/catalogo.svg", "label": "Catálogo"},
             {"href": "exclusive.html", "icon": "../../images/navbar/exclusivos.svg", "label": "Exclusivos"},
-            {"href": "categories.html", "icon": "../../images/navbar/categorias.svg", "label": "Categorias"}
+            {"href": "categories.html", "icon": "../../images/navbar/categorias.svg", "label": "Categorias"},
+            {"href": "about.html", "icon": "../../images/navbar/sobre.svg", "label": "Sobre"}
         ]'
     ></nav-bar>
     <main>
