Update navigation links, enhance About page content, and improve layout for categories and exclusive sections

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -27,7 +27,7 @@
             <div class="objective-content">
                 <div>
                     <h2>Nosso objetivo</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus molestie, mauris porta fermentum sollicitudin, nibh velit fermentum nulla, quis tincidunt risus nibh sed augue. Cras condimentum malesuada porta. Ut tincidunt augue in mauris luctus lacinia at eu quam. Duis in finibus augue. Morbi quis arcu nec massa suscipit aliquam.</p>
+                    <p>Nossa missão é conectar jogadores ao redor do mundo e proporcionar experiências únicas através de jogos incríveis e serviços de alta qualidade. Seja qual for seu estilo de jogo, estamos aqui para atender às suas necessidades e criar um espaço onde a diversão nunca termina.</p>
                 </div>
                 <div>
                     <div class="objective-images">
@@ -47,10 +47,9 @@
             <hr>
             <div class="about-content">
                 <img src="" alt="">
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus molestie, mauris porta fermentum sollicitudin, nibh velit fermentum nulla, quis tincidunt risus nibh sed augue. Cras condimentum malesuada porta. Ut tincidunt augue in mauris luctus lacinia at eu quam. Duis in finibus augue. Morbi quis arcu nec massa suscipit aliquam.</p>
+                <div>    
+                <p>Somos uma equipe apaixonada por jogos, tecnologia e inovação. Acreditamos que os jogos têm o poder de unir pessoas, criar amizades e proporcionar momentos inesquecíveis. Nosso foco é entregar conteúdo de qualidade e serviços que superem suas expectativas. Trabalhamos incansavelmente para oferecer uma experiência única, seja por meio de análises detalhadas, dicas valiosas ou uma plataforma interativa que conecta gamers de todas as partes. Estamos comprometidos em fomentar uma comunidade acolhedora e inclusiva, onde a paixão pelos jogos seja o elo principal. Seja você um jogador casual, colecionador ou competidor, estamos aqui para transformar sua jornada no universo dos games em algo extraordinário.</p>
                     <div class="social-media">
-                        <span>Encontre-me aqui</span>
                         <a href="#">
                             <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="30" cy="30" r="30" fill="#1A9F1A"/>
@@ -93,17 +92,20 @@
         </section>
 
         <section class="map">
-            <form action="">
-
-            </form>
             <iframe 
-                src="" 
-                frameborder="0"
-                style="border:0;"
-                allowfullscreen=""
-                aria-hidden="false"
-                tabindex="0"
+            src="https://www.google.com.br/maps/place/Centro+Universit%C3%A1rio+UniFavip+-+Wyden+-+Entrada+Principal/@-8.2943133,-35.9527266,17z/data=!4m16!1m9!3m8!1s0x7a98be8cf3157dd:0x98a0a3ecad4be817!2sCentro+Universit%C3%A1rio+UniFavip+-+Wyden+-+Entrada+Principal!8m2!3d-8.2943133!4d-35.9527266!9m1!1b1!16s%2Fg%2F1239cvn1!3m5!1s0x7a98be8cf3157dd:0x98a0a3ecad4be817!8m2!3d-8.2943133!4d-35.9527266!16s%2Fg%2F1239cvn1?entry=ttu&g_ep=EgoyMDI0MTExOS4yIKXMDSoASAFQAw%3D%3D"
+            allowfullscreen="" loading="lazy"
             ></iframe>
+            <form action="">
+                <h2>Envie me uma mensagem</h2>
+                <label for="">Nome</label>
+                <input type="text" name="name" id="name">
+                <label for="">Email</label>
+                <input type="email" name="email" id="email">
+                <label for="">Mensagem</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <button type="submit">Enviar</button>
+            </form>
         </section>
 
         <footer-component id="footer-text"></footer-component>
