--- a/Pages/exclusive.html
+++ b/Pages/exclusive.html
@@ -54,7 +54,7 @@
         </header>
         <main>
             <section>
-                <h1>Destaques.<a href=""> Ver mais.</a></h1>
+                <h1>Destaques</h1>
                 <hr>
                 <div class="highlights">
                     <div>
@@ -129,7 +129,7 @@
                 </div>
             </section>
             <section>
-                <h1>Exclusivos. <a href="">Ver todos.</a></h1>
+                <h1>Exclusivos. <a href="catalog.html">Ver todos.</a></h1>
                 <hr>
                 <div class="search-bar">
                     <input type="search" id="search" placeholder="Pesquisar jogos">
