--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <carousel-element></carousel-element>
         <div class="cards">
-            <h1>Mais vendidos da semana.<a href=""> Ver Todos.</a></h1>
+            <h1>Mais vendidos da semana.<a href="/Pages/exclusive.html"> Ver Todos.</a></h1>
             <hr/>
             <div class="top_sales">
                 <card-component
