Fix category links, adjust card margins, and add Action page with search functionality

--- a/Pages/categories.html
+++ b/Pages/categories.html
@@ -28,7 +28,7 @@
     <main>
         <div class="container">
             <div class="category-card">
-                <a href="categories/action.html">
+                <a href="categories/Action.html">
                     <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/2208920/ss_103481084a59b34837113daf27c04679caf743f3.1920x1080.jpg?t=1728574899" alt="">
                     <h2>Ação</h2>
                 </a>
